Add the rest of the sample files and a test output

--- a/sample/src/kyp2/CMakeLists.txt
+++ b/sample/src/kyp2/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library (kyp1 asd.c sdf.c) 
+add_library (kyp2 kyp2.c) 
 
 # Make sure the compiler can find include files for our library
 # when other libraries or executables user it
-target_include_directories (kyp1 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories (kyp2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
